# minimal-pico-tinyusb-pio-project

./: .gitmodules  CMakeLists.txt  LICENSE  Readme.md
.github/workflows/: cmake.yml
